--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,13 @@
 
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = [
-  "setuptools>=61.2",
-]
+requires = ["setuptools>=61.2"]
 
 [project]
 name = "django-storages"
 description = "Support for many storage backends in Django"
-license = {text = "BSD-3-Clause"}
-authors = [{name = "Josh Schneier", email = "josh.schneier@gmail.com"}]
+license = { text = "BSD-3-Clause" }
+authors = [{ name = "Josh Schneier", email = "josh.schneier@gmail.com" }]
 requires-python = ">=3.7"
 classifiers = [
   "Development Status :: 5 - Production/Stable",
@@ -35,84 +33,62 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
 ]
-dynamic = [
-  "readme",
-  "version",
-]
-dependencies = [
-  "Django>=3.2",
-]
+dynamic = ["readme", "version"]
+dependencies = ["Django>=3.2"]
 [project.optional-dependencies]
-azure = [
-  "azure-core>=1.13",
-  "azure-storage-blob>=12",
-]
-boto3 = [
-  "boto3>=1.4.4",
-]
-dropbox = [
-  "dropbox>=7.2.1; python_version<'3.12'",
-]
-google = [
-  "google-cloud-storage>=1.27",
-]
-libcloud = [
-  "apache-libcloud",
-]
-s3 = [
-  "boto3>=1.4.4",
-]
-sftp = [
-  "paramiko>=1.15",
-]
+azure = ["azure-core>=1.13", "azure-storage-blob>=12"]
+boto3 = ["boto3>=1.4.4"]
+dropbox = ["dropbox>=7.2.1; python_version<'3.12'"]
+google = ["google-cloud-storage>=1.27"]
+libcloud = ["apache-libcloud"]
+s3 = ["boto3>=1.4.4"]
+sftp = ["paramiko>=1.15"]
+vercel = ["vercel-storage>=0.0.1"]
 [project.urls]
 Homepage = "https://github.com/jschneier/django-storages"
 
 [tool.setuptools]
 zip-safe = false
-packages = [
-    "storages",
-    "storages.backends",
-]
+packages = ["storages", "storages.backends"]
 include-package-data = false
 
 [tool.setuptools.dynamic]
-readme = {file = ["README.rst"]}
-version = {attr = "storages.__version__"}
+readme = { file = ["README.rst"] }
+version = { attr = "storages.__version__" }
 
 [tool.ruff]
 lint.select = [
-  "AIR",    # Airflow
-  "ASYNC",  # flake8-async
-  "B",      # flake8-bugbear
-  "C4",     # flake8-comprehensions
-  "C90",    # McCabe cyclomatic complexity
-  "DJ",     # flake8-django
-  "E",      # pycodestyle
-  "EXE",    # flake8-executable
-  "F",      # Pyflakes
-  "FLY",    # flynt
-  "G",      # flake8-logging-format
-  "I",      # isort
-  "ICN",    # flake8-import-conventions
-  "INP",    # flake8-no-pep420
-  "INT",    # flake8-gettext
-  "ISC",    # flake8-implicit-str-concat
-  "NPY",    # NumPy-specific rules
-  "PD",     # pandas-vet
-  "PERF",   # Perflint
-  "PGH",    # pygrep-hooks
-  "PIE",    # flake8-pie
-  "PL",     # Pylint
-  "PYI",    # flake8-pyi
-  "RUF",    # Ruff-specific rules
-  "SLOT",   # flake8-slots
-  "T10",    # flake8-debugger
-  "T20",    # flake8-print
-  "TCH",    # flake8-type-checking
-  "TID",    # flake8-tidy-imports
-  "W",      # pycodestyle
-  "YTT",    # flake8-2020
+  "AIR",   # Airflow
+  "ASYNC", # flake8-async
+  "B",     # flake8-bugbear
+  "C4",    # flake8-comprehensions
+  "C90",   # McCabe cyclomatic complexity
+  "DJ",    # flake8-django
+  "E",     # pycodestyle
+  "EXE",   # flake8-executable
+  "F",     # Pyflakes
+  "FLY",   # flynt
+  "G",     # flake8-logging-format
+  "I",     # isort
+  "ICN",   # flake8-import-conventions
+  "INP",   # flake8-no-pep420
+  "INT",   # flake8-gettext
+  "ISC",   # flake8-implicit-str-concat
+  "NPY",   # NumPy-specific rules
+  "PD",    # pandas-vet
+  "PERF",  # Perflint
+  "PGH",   # pygrep-hooks
+  "PIE",   # flake8-pie
+  "PL",    # Pylint
+  "PYI",   # flake8-pyi
+  "RUF",   # Ruff-specific rules
+  "SLOT",  # flake8-slots
+  "T10",   # flake8-debugger
+  "T20",   # flake8-print
+  "TCH",   # flake8-type-checking
+  "TID",   # flake8-tidy-imports
+  "W",     # pycodestyle
+  "YTT",   # flake8-2020
   # "A",    # flake8-builtins
   # "ANN",  # flake8-annotations
   # "ARG",  # flake8-unused-arguments
@@ -138,11 +114,7 @@ lint.select = [
   # "TRY",  # tryceratops
   # "UP",   # pyupgrade
 ]
-lint.ignore = [
-  "B028",
-  "B904",
-  "PGH004",
- ]
+lint.ignore = ["B028", "B904", "PGH004"]
 target-version = "py37"
 
 [tool.ruff.lint.isort]
